Generate bed files from current catalog (per strain per svtype)

--- a/bed-from-catalog.ipynb
+++ b/bed-from-catalog.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "24c84e8e",
+   "cell_type": "markdown",
+   "id": "12a05bfb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "### Current catalog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 182,
    "id": "57f7faa9",
    "metadata": {
     "scrolled": false
@@ -183,277 +181,185 @@
        "      <td>X:4381696-4387658;DEL;RAW;DEL</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285178</th>\n",
-       "      <td>19</td>\n",
-       "      <td>61224544</td>\n",
-       "      <td>61224546</td>\n",
-       "      <td>POS:CL:BP:TY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19:61224544-61224546;INS;REF;H6INS</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285179</th>\n",
-       "      <td>19</td>\n",
-       "      <td>61236487</td>\n",
-       "      <td>61236489</td>\n",
-       "      <td>POS:CL:BP:TY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19:61236487-61236489;INS|SINE;RAW;H7INS</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285180</th>\n",
-       "      <td>19</td>\n",
-       "      <td>61237390</td>\n",
-       "      <td>61237392</td>\n",
-       "      <td>POS:CL:BP:TY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19:61237390-61237392;INS;REF;H6INS</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285181</th>\n",
-       "      <td>19</td>\n",
-       "      <td>61248464</td>\n",
-       "      <td>61251715</td>\n",
-       "      <td>POS:CL:BP:TY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19:61248464-61251715;DEL;REF;DEL</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285182</th>\n",
-       "      <td>19</td>\n",
-       "      <td>61254048</td>\n",
-       "      <td>61254096</td>\n",
-       "      <td>POS:CL:BP:TY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19:61254096-61254098;INS|RLTR10;RAW;H7INS</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>285183 rows × 22 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       CHROM     START       END        FORMAT                          129P2  \\\n",
-       "0          X   3476745   3477456  POS:CL:BP:TY  X:3476761-3477345;DEL;RAW;DEL   \n",
-       "1          X   3681483   3682211  POS:CL:BP:TY                              0   \n",
-       "2          X   3858775   3858777  POS:CL:BP:TY                              0   \n",
-       "3          X   4274734   4277734  POS:CL:BP:TY                              0   \n",
-       "4          X   4381696   4387658  POS:CL:BP:TY                              0   \n",
-       "...      ...       ...       ...           ...                            ...   \n",
-       "285178    19  61224544  61224546  POS:CL:BP:TY                              0   \n",
-       "285179    19  61236487  61236489  POS:CL:BP:TY                              0   \n",
-       "285180    19  61237390  61237392  POS:CL:BP:TY                              0   \n",
-       "285181    19  61248464  61251715  POS:CL:BP:TY                              0   \n",
-       "285182    19  61254048  61254096  POS:CL:BP:TY                              0   \n",
+       "  CHROM    START      END        FORMAT                          129P2  \\\n",
+       "0     X  3476745  3477456  POS:CL:BP:TY  X:3476761-3477345;DEL;RAW;DEL   \n",
+       "1     X  3681483  3682211  POS:CL:BP:TY                              0   \n",
+       "2     X  3858775  3858777  POS:CL:BP:TY                              0   \n",
+       "3     X  4274734  4277734  POS:CL:BP:TY                              0   \n",
+       "4     X  4381696  4387658  POS:CL:BP:TY                              0   \n",
        "\n",
-       "                                129S1 129S5 AJ AKRJ BALBcJ  ... CASTEiJ CBAJ  \\\n",
-       "0       X:3476745-3477456;DEL;RAW;DEL     0  0    0      0  ...       0    0   \n",
-       "1                                   0     0  0    0      0  ...       0    0   \n",
-       "2                                   0     0  0    0      0  ...       0    0   \n",
-       "3                                   0     0  0    0      0  ...       0    0   \n",
-       "4                                   0     0  0    0      0  ...       0    0   \n",
-       "...                               ...   ... ..  ...    ...  ...     ...  ...   \n",
-       "285178                              0     0  0    0      0  ...       0    0   \n",
-       "285179                              0     0  0    0      0  ...       0    0   \n",
-       "285180                              0     0  0    0      0  ...       0    0   \n",
-       "285181                              0     0  0    0      0  ...       0    0   \n",
-       "285182                              0     0  0    0      0  ...       0    0   \n",
+       "                           129S1 129S5 AJ AKRJ BALBcJ  ... CASTEiJ CBAJ DBA2J  \\\n",
+       "0  X:3476745-3477456;DEL;RAW;DEL     0  0    0      0  ...       0    0     0   \n",
+       "1                              0     0  0    0      0  ...       0    0     0   \n",
+       "2                              0     0  0    0      0  ...       0    0     0   \n",
+       "3                              0     0  0    0      0  ...       0    0     0   \n",
+       "4                              0     0  0    0      0  ...       0    0     0   \n",
        "\n",
-       "       DBA2J                            FVBNJ LPJ NODShiLtJ NZOHlLtJ PWKPhJ  \\\n",
-       "0          0                                0   0         0        0      0   \n",
-       "1          0                                0   0         0        0      0   \n",
-       "2          0  X:3858775-3858777;INS;REF;H6INS   0         0        0      0   \n",
-       "3          0                                0   0         0        0      0   \n",
-       "4          0                                0   0         0        0      0   \n",
-       "...      ...                              ...  ..       ...      ...    ...   \n",
-       "285178     0                                0   0         0        0      0   \n",
-       "285179     0                                0   0         0        0      0   \n",
-       "285180     0                                0   0         0        0      0   \n",
-       "285181     0                                0   0         0        0      0   \n",
-       "285182     0                                0   0         0        0      0   \n",
+       "                             FVBNJ LPJ NODShiLtJ NZOHlLtJ PWKPhJ  \\\n",
+       "0                                0   0         0        0      0   \n",
+       "1                                0   0         0        0      0   \n",
+       "2  X:3858775-3858777;INS;REF;H6INS   0         0        0      0   \n",
+       "3                                0   0         0        0      0   \n",
+       "4                                0   0         0        0      0   \n",
        "\n",
-       "                                         SPRETEiJ  \\\n",
-       "0                                               0   \n",
-       "1                                               0   \n",
-       "2                                               0   \n",
-       "3                   X:4274734-4277734;DEL;RAW;DEL   \n",
-       "4                   X:4381696-4387658;DEL;RAW;DEL   \n",
-       "...                                           ...   \n",
-       "285178         19:61224544-61224546;INS;REF;H6INS   \n",
-       "285179    19:61236487-61236489;INS|SINE;RAW;H7INS   \n",
-       "285180         19:61237390-61237392;INS;REF;H6INS   \n",
-       "285181           19:61248464-61251715;DEL;REF;DEL   \n",
-       "285182  19:61254096-61254098;INS|RLTR10;RAW;H7INS   \n",
+       "                        SPRETEiJ                         WSBEiJ  \n",
+       "0                              0                              0  \n",
+       "1                              0  X:3681483-3682211;DEL;RAW;DEL  \n",
+       "2                              0                              0  \n",
+       "3  X:4274734-4277734;DEL;RAW;DEL                              0  \n",
+       "4  X:4381696-4387658;DEL;RAW;DEL                              0  \n",
        "\n",
-       "                               WSBEiJ  \n",
-       "0                                   0  \n",
-       "1       X:3681483-3682211;DEL;RAW;DEL  \n",
-       "2                                   0  \n",
-       "3                                   0  \n",
-       "4                                   0  \n",
-       "...                               ...  \n",
-       "285178                              0  \n",
-       "285179                              0  \n",
-       "285180                              0  \n",
-       "285181                              0  \n",
-       "285182                              0  \n",
-       "\n",
-       "[285183 rows x 22 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "catalog_path = '../../data/previous_data/18strains.REL-1302-SV-GRCm38.sdp.tab'\n",
+    "import pandas as pd\n",
+    "import pathlib\n",
+    "import seedir as sd\n",
+    "\n",
+    "catalog_path = '../../data/previous-catalog/18strains.REL-1302-SV-GRCm38.sdp.tab'\n",
     "catalog_data = pd.read_csv(catalog_path, sep='\\t', low_memory=False)\n",
-    "catalog_data"
+    "catalog_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d27ede0",
+   "metadata": {},
+   "source": [
+    "### Generate bed files per strain per type:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f6a551ee",
+   "execution_count": 183,
+   "id": "6c5f8b44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_type=\"ALL\"\n",
-    "target_strain=\"DBA2J\"\n",
-    "target_file=\"../../data/previous_data/prev_\" +target_strain+ \"-\"+ target_type + \".bed\"\n",
+    "target_dir=\"../../data/previous-catalog/\"\n",
+    "data_dicts={}\n",
+    "target_strain=\"all\"\n",
+    "strain_data = []\n",
+    "unified_file=False\n",
     "\n",
-    "dba2j=catalog_data[catalog_data[target_strain]!=\"0\"][target_strain]\n",
+    "naming_method=1 # 1: First 3 Chars, 2: Any String until character \"|\" is found\n",
     "\n",
-    "with open(target_file, 'w') as out_file:\n",
-    "\n",
-    "    for value in dba2j:\n",
-    "        val_data = value.split(\";\")\n",
-    "        raw_pos=val_data[0].split(\":\")\n",
-    "        sv_type=val_data[1]\n",
+    "for strain in catalog_data.columns[4:]:\n",
+    "    if(strain != target_strain and target_strain!=\"all\"):\n",
+    "        continue\n",
+    "        \n",
+    "    strain_data=catalog_data[catalog_data[strain]!=\"0\"][strain]\n",
+    "    strain_dicts=data_dicts.get(strain, {})\n",
+    "    \n",
+    "    for entry in strain_data:\n",
+    "        entry_data = entry.split(\";\")\n",
+    "        raw_pos = entry_data[0].split(\":\")\n",
+    "        \n",
+    "        if naming_method == 1:\n",
+    "            sv_type = entry_data[1][:3]\n",
+    "        else:\n",
+    "            sv_type = entry_data[1].split(\"|\")[0].split(\"(\")[0]\n",
+    "        \n",
+    "        if unified_file:\n",
+    "            sv_type =  \"ALL\"\n",
+    "        \n",
     "        chr1=\"chr\"+raw_pos[0]\n",
     "        start_end=raw_pos[1].split(\"-\")\n",
     "        start=start_end[0]\n",
     "        end=start_end[1]\n",
     "        length = int(end)-int(start)\n",
     "        \n",
-    "        out_line=chr1+\"\\t\"+start+\"\\t\"+end+\"\\t\"+str(length)+\"\\n\"\n",
-    "        out_file.write(out_line)\n",
-    "    "
+    "        strain_type_dict = strain_dicts.get(sv_type, [])\n",
+    "        strain_type_dict.append({\"chr\": chr1, \"start\": start, \"end\": end, \"len\": str(length)}) \n",
+    "        \n",
+    "        strain_dicts[sv_type]=strain_type_dict\n",
+    "        \n",
+    "    data_dicts[strain]=strain_dicts\n",
+    "    \n",
+    "    final_dir = target_dir + strain + \"/\"\n",
+    "    pathlib.Path(final_dir).mkdir(parents=True, exist_ok=True)\n",
+    "        \n",
+    "    for type_dict in data_dicts[strain].keys():\n",
+    "\n",
+    "        type_df = pd.DataFrame(data_dicts[strain][type_dict])\n",
+    "        type_df.to_csv(final_dir + strain + \"_\" + type_dict + \".bed\", sep='\\t', index=False, header=False)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0a7f4a",
+   "metadata": {},
+   "source": [
+    "### Generated files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "b6e77463",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 previous-catalog/\n",
+      "├─📁 129P2/\n",
+      "│ ├─📄 129P2_ALL.bed\n",
+      "│ ├─📄 129P2_DEL.bed\n",
+      "│ ├─📄 129P2_GAI.bed\n",
+      "│ ├─📄 129P2_INS.bed\n",
+      "│ └─📄 129P2_INV.bed\n",
+      "├─📁 129S1/\n",
+      "│ ├─📄 129S1_ALL.bed\n",
+      "│ ├─📄 129S1_DEL.bed\n",
+      "│ ├─📄 129S1_GAI.bed\n",
+      "│ ├─📄 129S1_INS.bed\n",
+      "│ └─📄 129S1_INV.bed\n",
+      "├─📁 129S5/\n",
+      "│ ├─📄 129S5_ALL.bed\n",
+      "│ ├─📄 129S5_DEL.bed\n",
+      "│ ├─📄 129S5_GAI.bed\n",
+      "│ ├─📄 129S5_INS.bed\n",
+      "│ └─📄 129S5_INV.bed\n",
+      "├─📁 AJ/\n",
+      "│ ├─📄 AJ_ALL.bed\n",
+      "│ ├─📄 AJ_DEL.bed\n",
+      "│ ├─📄 AJ_GAI.bed\n",
+      "│ ├─📄 AJ_INS.bed\n",
+      "│ └─📄 AJ_INV.bed\n",
+      "└─📁 AKRJ/\n",
+      "  ├─📄 AKRJ_ALL.bed\n",
+      "  ├─📄 AKRJ_DEL.bed\n",
+      "  ├─📄 AKRJ_GAI.bed\n",
+      "  ├─📄 AKRJ_INS.bed\n",
+      "  └─📄 AKRJ_INV.bed\n"
+     ]
+    }
+   ],
+   "source": [
+    "sd.seedir(target_dir, style='emoji', itemlimit=5, depthlimit=2, include_files='.*\\.bed$', regex=True, sort=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c5f8b44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a04c041c",
+   "id": "aa80305c",
    "metadata": {},
    "outputs": [],
    "source": []
