--- a/bed-from-catalog.ipynb
+++ b/bed-from-catalog.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 7,
    "id": "57f7faa9",
    "metadata": {
     "scrolled": false
@@ -218,7 +218,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,59 +243,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 33,
    "id": "6c5f8b44",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def bed_from_catalog(catalog_file, target_dir, target_strain, unified_file, naming_method):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    bed_from_catalog(catalog_file, target_dir, target_strain, unified_file, naming_method)\n",
+    "\n",
+    "    Generates BED Files from current SVs x Strain catalog.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    catalog_file : str\n",
+    "        Path of the input catalog.\n",
+    "    target_dir : str\n",
+    "        Folder in which the BED files will be created.\n",
+    "    target_strain : str\n",
+    "        Strain (col names from catalog) for which the BED files will be created or \"ALL\".\n",
+    "    unified_file : bool\n",
+    "        If true, a single file is generated instead of one file per SV Type\n",
+    "    naming_method: int\n",
+    "        Naming for SV Types, currenly supports two options (1,2):\n",
+    "        1 => First 3 Chars, 2 => Any String until character \"|\" is found\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        Merged list of SV Types found\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    data_dicts = {}\n",
+    "    strain_data = []\n",
+    "    all_types = []\n",
+    "\n",
+    "    for strain in catalog_data.columns[4:]:\n",
+    "        if(strain != target_strain and target_strain!=\"all\"):\n",
+    "            continue\n",
+    "\n",
+    "        strain_data=catalog_data[catalog_data[strain]!=\"0\"][strain]\n",
+    "        strain_dicts=data_dicts.get(strain, {})\n",
+    "\n",
+    "        for entry in strain_data:\n",
+    "            entry_data = entry.split(\";\")\n",
+    "            raw_pos = entry_data[0].split(\":\")\n",
+    "\n",
+    "            if naming_method == 1:\n",
+    "                sv_type = entry_data[1][:3]\n",
+    "            else:\n",
+    "                sv_type = entry_data[1].split(\"|\")[0].split(\"(\")[0]\n",
+    "\n",
+    "            if unified_file:\n",
+    "                sv_type =  \"ALL\"\n",
+    "\n",
+    "            chr1=\"chr\"+raw_pos[0]\n",
+    "            start_end=raw_pos[1].split(\"-\")\n",
+    "            start=start_end[0]\n",
+    "            end=start_end[1]\n",
+    "            length = int(end)-int(start)\n",
+    "\n",
+    "            strain_type_dict = strain_dicts.get(sv_type, [])\n",
+    "            strain_type_dict.append({\"chr\": chr1, \"start\": start, \"end\": end, \"len\": str(length)}) \n",
+    "\n",
+    "            strain_dicts[sv_type]=strain_type_dict\n",
+    "\n",
+    "        data_dicts[strain]=strain_dicts\n",
+    "\n",
+    "        final_dir = target_dir + strain + \"/\"\n",
+    "        pathlib.Path(final_dir).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "        for type_dict in data_dicts[strain].keys():\n",
+    "            type_df = pd.DataFrame(data_dicts[strain][type_dict])\n",
+    "            type_df.to_csv(final_dir + strain + \"_\" + type_dict + \".bed\", sep='\\t', index=False, header=False)\n",
+    "        \n",
+    "        all_types = list(set(all_types) | set([*data_dicts[strain]]))\n",
+    "        \n",
+    "    return all_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "47cb1ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TANDEMDUP',\n",
+       " 'INVDEL',\n",
+       " 'DELLINKED',\n",
+       " 'DELINS',\n",
+       " 'INSLINKEDINS',\n",
+       " 'DEL',\n",
+       " 'INVINS',\n",
+       " 'INS',\n",
+       " 'INVDELINS',\n",
+       " 'INV',\n",
+       " 'GAIN',\n",
+       " 'INSLINKED',\n",
+       " 'TANDEMLOWDUP',\n",
+       " 'TANDEMDUPINV']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "target_dir=\"../../data/previous-catalog/\"\n",
-    "data_dicts={}\n",
-    "target_strain=\"all\"\n",
-    "strain_data = []\n",
+    "target_strain=\"DBA2J\"\n",
     "unified_file=False\n",
+    "naming_method=2\n",
     "\n",
-    "naming_method=1 # 1: First 3 Chars, 2: Any String until character \"|\" is found\n",
-    "\n",
-    "for strain in catalog_data.columns[4:]:\n",
-    "    if(strain != target_strain and target_strain!=\"all\"):\n",
-    "        continue\n",
-    "        \n",
-    "    strain_data=catalog_data[catalog_data[strain]!=\"0\"][strain]\n",
-    "    strain_dicts=data_dicts.get(strain, {})\n",
-    "    \n",
-    "    for entry in strain_data:\n",
-    "        entry_data = entry.split(\";\")\n",
-    "        raw_pos = entry_data[0].split(\":\")\n",
-    "        \n",
-    "        if naming_method == 1:\n",
-    "            sv_type = entry_data[1][:3]\n",
-    "        else:\n",
-    "            sv_type = entry_data[1].split(\"|\")[0].split(\"(\")[0]\n",
-    "        \n",
-    "        if unified_file:\n",
-    "            sv_type =  \"ALL\"\n",
-    "        \n",
-    "        chr1=\"chr\"+raw_pos[0]\n",
-    "        start_end=raw_pos[1].split(\"-\")\n",
-    "        start=start_end[0]\n",
-    "        end=start_end[1]\n",
-    "        length = int(end)-int(start)\n",
-    "        \n",
-    "        strain_type_dict = strain_dicts.get(sv_type, [])\n",
-    "        strain_type_dict.append({\"chr\": chr1, \"start\": start, \"end\": end, \"len\": str(length)}) \n",
-    "        \n",
-    "        strain_dicts[sv_type]=strain_type_dict\n",
-    "        \n",
-    "    data_dicts[strain]=strain_dicts\n",
-    "    \n",
-    "    final_dir = target_dir + strain + \"/\"\n",
-    "    pathlib.Path(final_dir).mkdir(parents=True, exist_ok=True)\n",
-    "        \n",
-    "    for type_dict in data_dicts[strain].keys():\n",
-    "\n",
-    "        type_df = pd.DataFrame(data_dicts[strain][type_dict])\n",
-    "        type_df.to_csv(final_dir + strain + \"_\" + type_dict + \".bed\", sep='\\t', index=False, header=False)\n",
-    "        "
+    "bed_from_catalog(catalog_path, target_dir, \"DBA2J\", False, 2)"
    ]
   },
   {
@@ -308,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 32,
    "id": "b6e77463",
    "metadata": {
     "scrolled": false
@@ -319,36 +383,12 @@
      "output_type": "stream",
      "text": [
       "📁 previous-catalog/\n",
-      "├─📁 129P2/\n",
-      "│ ├─📄 129P2_ALL.bed\n",
-      "│ ├─📄 129P2_DEL.bed\n",
-      "│ ├─📄 129P2_GAI.bed\n",
-      "│ ├─📄 129P2_INS.bed\n",
-      "│ └─📄 129P2_INV.bed\n",
-      "├─📁 129S1/\n",
-      "│ ├─📄 129S1_ALL.bed\n",
-      "│ ├─📄 129S1_DEL.bed\n",
-      "│ ├─📄 129S1_GAI.bed\n",
-      "│ ├─📄 129S1_INS.bed\n",
-      "│ └─📄 129S1_INV.bed\n",
-      "├─📁 129S5/\n",
-      "│ ├─📄 129S5_ALL.bed\n",
-      "│ ├─📄 129S5_DEL.bed\n",
-      "│ ├─📄 129S5_GAI.bed\n",
-      "│ ├─📄 129S5_INS.bed\n",
-      "│ └─📄 129S5_INV.bed\n",
-      "├─📁 AJ/\n",
-      "│ ├─📄 AJ_ALL.bed\n",
-      "│ ├─📄 AJ_DEL.bed\n",
-      "│ ├─📄 AJ_GAI.bed\n",
-      "│ ├─📄 AJ_INS.bed\n",
-      "│ └─📄 AJ_INV.bed\n",
-      "└─📁 AKRJ/\n",
-      "  ├─📄 AKRJ_ALL.bed\n",
-      "  ├─📄 AKRJ_DEL.bed\n",
-      "  ├─📄 AKRJ_GAI.bed\n",
-      "  ├─📄 AKRJ_INS.bed\n",
-      "  └─📄 AKRJ_INV.bed\n"
+      "└─📁 DBA2J/\n",
+      "  ├─📄 DBA2J_DEL.bed\n",
+      "  ├─📄 DBA2J_DELINS.bed\n",
+      "  ├─📄 DBA2J_DELLINKED.bed\n",
+      "  ├─📄 DBA2J_GAIN.bed\n",
+      "  └─📄 DBA2J_INS.bed\n"
      ]
     }
    ],
