--- a/bed-from-catalog.ipynb
+++ b/bed-from-catalog.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "57f7faa9",
    "metadata": {
     "scrolled": false
@@ -218,7 +218,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "6c5f8b44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bed_from_catalog(catalog_file, target_dir, target_strain, unified_file, naming_method):\n",
+    "def bed_from_catalog(catalog_file, target_dir, target_strain=\"ALL\", unified_file=False, naming_method=2, custom_mappings={}):\n",
     "    \n",
     "    \"\"\"\n",
     "    bed_from_catalog(catalog_file, target_dir, target_strain, unified_file, naming_method)\n",
@@ -268,6 +268,8 @@
     "    naming_method: int\n",
     "        Naming for SV Types, currenly supports two options (1,2):\n",
     "        1 => First 3 Chars, 2 => Any String until character \"|\" is found\n",
+    "    custom_mappings: dict\n",
+    "        Custome mapping for SV Type names\n",
     "        \n",
     "    Returns\n",
     "    -------\n",
@@ -294,6 +296,8 @@
     "                sv_type = entry_data[1][:3]\n",
     "            else:\n",
     "                sv_type = entry_data[1].split(\"|\")[0].split(\"(\")[0]\n",
+    "            \n",
+    "            sv_type = custom_mappings.get(sv_type, sv_type)\n",
     "\n",
     "            if unified_file:\n",
     "                sv_type =  \"ALL\"\n",
@@ -325,30 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "47cb1ae0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['TANDEMDUP',\n",
-       " 'INVDEL',\n",
-       " 'DELLINKED',\n",
-       " 'DELINS',\n",
-       " 'INSLINKEDINS',\n",
-       " 'DEL',\n",
-       " 'INVINS',\n",
-       " 'INS',\n",
-       " 'INVDELINS',\n",
-       " 'INV',\n",
-       " 'GAIN',\n",
-       " 'INSLINKED',\n",
-       " 'TANDEMLOWDUP',\n",
-       " 'TANDEMDUPINV']"
+       "['ALL']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +350,21 @@
     "unified_file=False\n",
     "naming_method=2\n",
     "\n",
-    "bed_from_catalog(catalog_path, target_dir, \"DBA2J\", False, 2)"
+    "custom_mappings={\n",
+    "    \"DEL\": \"DEL\",\n",
+    "    \"DELINS\": \"DEL\",\n",
+    "    \"DELLINKED\": \"DEL\",\n",
+    "    \"INS\": \"INS\",\n",
+    "    \"INSLINKED\": \"INS\",\n",
+    "    \"INSLINKEDINS\": \"INS\",\n",
+    "    \"INV\": \"INV\",\n",
+    "    \"INVDELINS\": \"INV\",\n",
+    "    \"INVINS\": \"INV\",\n",
+    "    \"INVDUP\": \"INV\",\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "bed_from_catalog(catalog_path, target_dir, \"DBA2J\", False, 2, custom_mappings)"
    ]
   },
   {
