Filter SVs length

--- a/bed-from-catalog.ipynb
+++ b/bed-from-catalog.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "57f7faa9",
    "metadata": {
     "scrolled": false
@@ -218,7 +218,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "6c5f8b44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bed_from_catalog(catalog_file, target_dir, target_strain=\"ALL\", unified_file=False, naming_method=2, custom_mappings={}):\n",
+    "def bed_from_catalog(catalog_file, target_dir, target_strain=\"ALL\", \n",
+    "                     unified_file=False, naming_method=2, custom_mappings={}, min_len=-1):\n",
     "    \n",
     "    \"\"\"\n",
     "    bed_from_catalog(catalog_file, target_dir, target_strain, unified_file, naming_method)\n",
@@ -269,7 +270,9 @@
     "        Naming for SV Types, currenly supports two options (1,2):\n",
     "        1 => First 3 Chars, 2 => Any String until character \"|\" is found\n",
     "    custom_mappings: dict\n",
-    "        Custome mapping for SV Type names\n",
+    "        Custom mapping for SV Type names\n",
+    "    min_len: int\n",
+    "        Minimum length\n",
     "        \n",
     "    Returns\n",
     "    -------\n",
@@ -282,7 +285,7 @@
     "    all_types = []\n",
     "\n",
     "    for strain in catalog_data.columns[4:]:\n",
-    "        if(strain != target_strain and target_strain!=\"all\"):\n",
+    "        if(strain != target_strain and target_strain!=\"ALL\"):\n",
     "            continue\n",
     "\n",
     "        strain_data=catalog_data[catalog_data[strain]!=\"0\"][strain]\n",
@@ -299,14 +302,21 @@
     "            \n",
     "            sv_type = custom_mappings.get(sv_type, sv_type)\n",
     "\n",
-    "            if unified_file:\n",
-    "                sv_type =  \"ALL\"\n",
-    "\n",
     "            chr1=\"chr\"+raw_pos[0]\n",
     "            start_end=raw_pos[1].split(\"-\")\n",
     "            start=start_end[0]\n",
     "            end=start_end[1]\n",
     "            length = int(end)-int(start)\n",
+    "            \n",
+    "            if start == end or length <= 40 and (sv_type == \"INS\") :\n",
+    "                start = int(start) - 20\n",
+    "                end = int (end) + 20\n",
+    "                \n",
+    "#             if min_len > 0 and length < min_len:\n",
+    "#                 continue\n",
+    "                \n",
+    "            if unified_file:\n",
+    "                sv_type =  \"ALL\"\n",
     "\n",
     "            strain_type_dict = strain_dicts.get(sv_type, [])\n",
     "            strain_type_dict.append({\"chr\": chr1, \"start\": start, \"end\": end, \"len\": str(length)}) \n",
@@ -329,23 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "47cb1ae0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ALL']"
+       "['INV',\n",
+       " 'INVDEL',\n",
+       " 'INS',\n",
+       " 'TANDEMLOWDUP',\n",
+       " 'DEL',\n",
+       " 'TANDEMDUPINV',\n",
+       " 'TANDEMDUP',\n",
+       " 'GAIN']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_dir=\"../../data/previous-catalog/\"\n",
+    "target_dir=\"../../data/previous-catalog/50/\"\n",
     "target_strain=\"DBA2J\"\n",
     "unified_file=False\n",
     "naming_method=2\n",
@@ -361,10 +378,9 @@
     "    \"INVDELINS\": \"INV\",\n",
     "    \"INVINS\": \"INV\",\n",
     "    \"INVDUP\": \"INV\",\n",
-    "    \n",
     "}\n",
     "\n",
-    "bed_from_catalog(catalog_path, target_dir, \"DBA2J\", False, 2, custom_mappings)"
+    "bed_from_catalog(catalog_path, target_dir, target_strain, False, 2, custom_mappings)"
    ]
   },
   {
@@ -377,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "b6e77463",
    "metadata": {
     "scrolled": false
@@ -388,12 +404,36 @@
      "output_type": "stream",
      "text": [
       "📁 previous-catalog/\n",
-      "└─📁 DBA2J/\n",
-      "  ├─📄 DBA2J_DEL.bed\n",
-      "  ├─📄 DBA2J_DELINS.bed\n",
-      "  ├─📄 DBA2J_DELLINKED.bed\n",
-      "  ├─📄 DBA2J_GAIN.bed\n",
-      "  └─📄 DBA2J_INS.bed\n"
+      "├─📁 129P2/\n",
+      "│ ├─📄 129P2_DEL.bed\n",
+      "│ ├─📄 129P2_GAIN.bed\n",
+      "│ ├─📄 129P2_INS.bed\n",
+      "│ ├─📄 129P2_INV.bed\n",
+      "│ └─📄 129P2_INVDEL.bed\n",
+      "├─📁 129S1/\n",
+      "│ ├─📄 129S1_DEL.bed\n",
+      "│ ├─📄 129S1_GAIN.bed\n",
+      "│ ├─📄 129S1_INS.bed\n",
+      "│ ├─📄 129S1_INV.bed\n",
+      "│ └─📄 129S1_INVDEL.bed\n",
+      "├─📁 129S5/\n",
+      "│ ├─📄 129S5_DEL.bed\n",
+      "│ ├─📄 129S5_GAIN.bed\n",
+      "│ ├─📄 129S5_INS.bed\n",
+      "│ ├─📄 129S5_INV.bed\n",
+      "│ └─📄 129S5_INVDEL.bed\n",
+      "├─📁 AJ/\n",
+      "│ ├─📄 AJ_DEL.bed\n",
+      "│ ├─📄 AJ_GAIN.bed\n",
+      "│ ├─📄 AJ_INS.bed\n",
+      "│ ├─📄 AJ_INV.bed\n",
+      "│ └─📄 AJ_INVDEL.bed\n",
+      "└─📁 AKRJ/\n",
+      "  ├─📄 AKRJ_DEL.bed\n",
+      "  ├─📄 AKRJ_GAIN.bed\n",
+      "  ├─📄 AKRJ_INS.bed\n",
+      "  ├─📄 AKRJ_INV.bed\n",
+      "  └─📄 AKRJ_INVDEL.bed\n"
      ]
     }
    ],
@@ -426,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
