--- a/bed-from-vcf.ipynb
+++ b/bed-from-vcf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "64fdc593",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "464dd0c2",
    "metadata": {},
    "outputs": [],
@@ -67,22 +67,55 @@
     "Column | Data         | Comment                          \n",
     ":---   | ---          | ---                              \n",
     "Col1   | chr num      | 'chr' prefixed                   \n",
-    "Col2   | start        | from sniffles output column (2)  \n",
-    "Col3   | end          | fom info data                    \n",
-    "Col4   | length       | fom info data                    \n",
-    "Col5   | type         | fom info data                    "
+    "Col2   | start        | from sniffles output column (2)*  \n",
+    "Col3   | end          | fom info data *                    \n",
+    "Col4   | length       | fom info data              \n",
+    "\n",
+    "In case both start and end are the same (usually insertions), the start-end range will be modified by 20 bp at the start and end."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "36bc9935",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bed_from_vcf(strain_name, input_file, final_dir, custom_mappings={}, unified_file=False,\n",
+    "def bed_from_vcf(strain_name, input_file, final_dir, custom_mappings={}, min_len=-1, unified_file=False,\n",
     "                 split_precise=False, fix_coordinates=True, exclude_bnd=True, exlude_noend=True):\n",
     "\n",
+    "    \"\"\"\n",
+    "    bed_from_vcf(strain_name, input_file, final_dir, custom_mappings, unified_file, split_precise, \n",
+    "                 fix_coordinates, exclude_bnd, exlude_noend)\n",
+    "\n",
+    "    Generates BED Files from VCF files (Currently supports Sniffles and PBSV).\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    strain_name : str\n",
+    "        Name prefix for generated files\n",
+    "    input_file : str\n",
+    "        Input VCF\n",
+    "    final_dir : str\n",
+    "        Output Dir\n",
+    "    custom_mappings : dict\n",
+    "        Custom mapping for SV Type names\n",
+    "    min_len: int\n",
+    "        Minimum length for SVs (exclude SVs with length lower than). Set -1 to report all lengths.\n",
+    "    unified_file: bool\n",
+    "        A file is generated per SV Type unless this parameter is true.\n",
+    "    split_precise, fix_coordinates, exclude_bnd, exlude_noend : bool\n",
+    "        Whether or not the output will differentiate precise from non-precise SVs,\n",
+    "        fix coordinates so start is always lower than end, and exclude entries \n",
+    "        with SVTYPE=BND and no end position\n",
+    "    \n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        Merged list of SV Types found\n",
+    "    \"\"\"\n",
+    "    \n",
     "    chr_names=[\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\"chr15\",\"chr16\",\"chr17\",\"chr18\",\"chr19\",\"chrX\",\"chrY\"]\n",
     "    nucleotides = [\"A\", \"T\", \"G\", \"C\"]\n",
     "\n",
@@ -102,6 +135,9 @@
     "\n",
     "            end=int(info['END'])-1\n",
     "            length=abs(int(info['SVLEN']))\n",
+    "            \n",
+    "            if min_len > 0 and length < min_len :\n",
+    "                continue\n",
     "\n",
     "            sv_type = info['SVTYPE'].replace(\"/\",\"\").upper()\n",
     "            sv_type = custom_mappings.get(sv_type, sv_type)\n",
@@ -118,7 +154,8 @@
     "                end = aux\n",
     "\n",
     "            if fix_coordinates and start == end:\n",
-    "                end + end +1\n",
+    "                start -= 20\n",
+    "                end += 20\n",
     "\n",
     "            if split_precise:\n",
     "                if any(e in str(line_array[4]) for e in nucleotides):\n",
@@ -145,30 +182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "a767af79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ALL']"
+       "['DUP', 'DELINV', 'INS', 'INV', 'DEL']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sv_file_path = '../../data/DBA2J/calls/r64089e.minimap2_sniffles.vcf'\n",
-    "final_dir = '../../data/DBA2J/bed/minimap2-sniffles/'\n",
+    "final_dir = '../../data/DBA2J/bed/50/minimap2-sniffles/'\n",
     "\n",
     "# sv_file_path = '../../data/DBA2J/calls/r64089e-ngmlr_sniffles.vcf'\n",
-    "# final_dir = '../../data/DBA2J/bed/ngmlr-sniffles/'\n",
+    "# final_dir = '../../data/DBA2J/bed/50/ngmlr-sniffles/'\n",
     "\n",
     "# sv_file_path = '../../data/DBA2J/calls/r64089e-minimap2_pbsv.vcf'\n",
-    "# final_dir = '../../data/DBA2J/bed/minimap2-pbsv/'\n",
+    "# final_dir = '../../data/DBA2J/bed/50/minimap2-pbsv/'\n",
     "\n",
     "custom_mappings={\n",
     "    \"DEL\": \"DEL\",\n",
@@ -184,12 +221,12 @@
     "    \n",
     "}\n",
     "\n",
-    "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, True)"
+    "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "368386a2",
    "metadata": {},
    "outputs": [
@@ -199,28 +236,27 @@
      "text": [
       "📁 bed/\n",
       "├─📁 minimap2-pbsv/\n",
+      "│ ├─📄 DBA2J_ALL.bed\n",
       "│ ├─📄 DBA2J_CNV.bed\n",
       "│ ├─📄 DBA2J_DEL.bed\n",
       "│ ├─📄 DBA2J_DUP.bed\n",
       "│ ├─📄 DBA2J_INS.bed\n",
       "│ └─📄 DBA2J_INV.bed\n",
       "├─📁 minimap2-sniffles/\n",
+      "│ ├─📄 DBA2J_ALL.bed\n",
       "│ ├─📄 DBA2J_DEL.bed\n",
       "│ ├─📄 DBA2J_DELINV.bed\n",
       "│ ├─📄 DBA2J_DUP.bed\n",
       "│ ├─📄 DBA2J_INS.bed\n",
-      "│ ├─📄 DBA2J_INV.bed\n",
-      "│ ├─📄 DBA2J_INVDUP.bed\n",
-      "│ └─📁 precise/\n",
+      "│ └─📄 DBA2J_INV.bed\n",
       "├─📁 ngmlr-sniffles/\n",
+      "│ ├─📄 DBA2J_ALL.bed\n",
       "│ ├─📄 DBA2J_DEL.bed\n",
       "│ ├─📄 DBA2J_DELINV.bed\n",
       "│ ├─📄 DBA2J_DUP.bed\n",
       "│ ├─📄 DBA2J_DUPINS.bed\n",
       "│ ├─📄 DBA2J_INS.bed\n",
-      "│ ├─📄 DBA2J_INV.bed\n",
-      "│ ├─📄 DBA2J_INVDUP.bed\n",
-      "│ └─📁 precise/\n",
+      "│ └─📄 DBA2J_INV.bed\n",
       "├─📄 r64089e.minimap2-sniffles.bed\n",
       "├─📄 r64089e.minimap2-sniffles_other.bed\n",
       "└─📄 r64089e.minimap2-sniffles_precise.bed\n"
@@ -228,7 +264,7 @@
     }
    ],
    "source": [
-    "sd.seedir(\"../../data/DBA2J/bed/\", style='emoji', itemlimit=10, depthlimit=2, include_files='.*\\.bed$', regex=True, sort=True)"
+    "sd.seedir(\"../../data/DBA2J/bed/\", style='emoji', itemlimit=10, depthlimit=3, include_files='.*\\.bed$', regex=True, sort=True)"
    ]
   },
   {
@@ -256,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
