--- a/sv-distribution.ipynb
+++ b/sv-distribution.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "21c23f4f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f0a863ab",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "aa55c43e",
    "metadata": {},
    "outputs": [
@@ -113,224 +113,224 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>chr1</th>\n",
-       "      <td>3659.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3806.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3659</td>\n",
+       "      <td>74</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3806</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr2</th>\n",
-       "      <td>2817.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3221.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2817</td>\n",
+       "      <td>45</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3221</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr3</th>\n",
-       "      <td>2401.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2323.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2401</td>\n",
+       "      <td>30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2323</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr4</th>\n",
-       "      <td>2447.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2550.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2447</td>\n",
+       "      <td>36</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2550</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr5</th>\n",
-       "      <td>1980.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2120.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2120</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr6</th>\n",
-       "      <td>1900.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2003.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>31</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr7</th>\n",
-       "      <td>2611.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2931.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2611</td>\n",
+       "      <td>48</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2931</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr8</th>\n",
-       "      <td>2430.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2288.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2430</td>\n",
+       "      <td>42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2288</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr9</th>\n",
-       "      <td>1691.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1792.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1691</td>\n",
+       "      <td>35</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1792</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr10</th>\n",
-       "      <td>1246.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1421.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1246</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1421</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr11</th>\n",
-       "      <td>2002.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2359.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2359</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr12</th>\n",
-       "      <td>1793.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1745.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1793</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1745</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr13</th>\n",
-       "      <td>1551.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1479.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1479</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr14</th>\n",
-       "      <td>2594.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2480.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2594</td>\n",
+       "      <td>55</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2480</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr15</th>\n",
-       "      <td>1173.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1138.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1173</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr16</th>\n",
-       "      <td>1139.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1133.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1133</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr17</th>\n",
-       "      <td>1657.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1822.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1657</td>\n",
+       "      <td>33</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1822</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr18</th>\n",
-       "      <td>784.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>901.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>784</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>901</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chr19</th>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1165.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chrX</th>\n",
-       "      <td>457.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>570.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>457</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>570</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chrY</th>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "type           DEL  DEL/INV   DUP     INS   INV  INVDUP\n",
-       "chromosome                                             \n",
-       "chr1        3659.0     74.0  11.0  3806.0  23.0     0.0\n",
-       "chr2        2817.0     45.0   6.0  3221.0  19.0     0.0\n",
-       "chr3        2401.0     30.0   3.0  2323.0  11.0     1.0\n",
-       "chr4        2447.0     36.0   6.0  2550.0  11.0     0.0\n",
-       "chr5        1980.0     25.0   3.0  2120.0  13.0     0.0\n",
-       "chr6        1900.0     31.0   5.0  2003.0  10.0     0.0\n",
-       "chr7        2611.0     48.0   6.0  2931.0  21.0     0.0\n",
-       "chr8        2430.0     42.0   6.0  2288.0  16.0     1.0\n",
-       "chr9        1691.0     35.0   5.0  1792.0   9.0     0.0\n",
-       "chr10       1246.0     21.0   1.0  1421.0   8.0     0.0\n",
-       "chr11       2002.0     27.0   7.0  2359.0   6.0     0.0\n",
-       "chr12       1793.0     23.0  11.0  1745.0  13.0     0.0\n",
-       "chr13       1551.0     16.0   1.0  1479.0   9.0     0.0\n",
-       "chr14       2594.0     55.0   3.0  2480.0  10.0     0.0\n",
-       "chr15       1173.0     21.0   2.0  1138.0   7.0     0.0\n",
-       "chr16       1139.0     17.0   5.0  1133.0   1.0     0.0\n",
-       "chr17       1657.0     33.0  11.0  1822.0  10.0     0.0\n",
-       "chr18        784.0     11.0   3.0   901.0   4.0     0.0\n",
-       "chr19       1003.0     22.0   0.0  1165.0   4.0     0.0\n",
-       "chrX         457.0      2.0   0.0   570.0   2.0     0.0\n",
-       "chrY          40.0      0.0   2.0    22.0   0.0     0.0"
+       "type         DEL  DEL/INV  DUP   INS  INV  INVDUP\n",
+       "chromosome                                       \n",
+       "chr1        3659       74   11  3806   23       0\n",
+       "chr2        2817       45    6  3221   19       0\n",
+       "chr3        2401       30    3  2323   11       1\n",
+       "chr4        2447       36    6  2550   11       0\n",
+       "chr5        1980       25    3  2120   13       0\n",
+       "chr6        1900       31    5  2003   10       0\n",
+       "chr7        2611       48    6  2931   21       0\n",
+       "chr8        2430       42    6  2288   16       1\n",
+       "chr9        1691       35    5  1792    9       0\n",
+       "chr10       1246       21    1  1421    8       0\n",
+       "chr11       2002       27    7  2359    6       0\n",
+       "chr12       1793       23   11  1745   13       0\n",
+       "chr13       1551       16    1  1479    9       0\n",
+       "chr14       2594       55    3  2480   10       0\n",
+       "chr15       1173       21    2  1138    7       0\n",
+       "chr16       1139       17    5  1133    1       0\n",
+       "chr17       1657       33   11  1822   10       0\n",
+       "chr18        784       11    3   901    4       0\n",
+       "chr19       1003       22    0  1165    4       0\n",
+       "chrX         457        2    0   570    2       0\n",
+       "chrY          40        0    2    22    0       0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "plot_data=data.groupby([\"chromosome\",\"type\"])[\"chromosome\"].size().unstack(\"type\").fillna(0).sort_index(key=lambda x: x.map(lambda v: int(v[3:].replace(\"X\",\"99\").replace(\"Y\",\"100\"))))\n",
+    "plot_data=data.groupby([\"chromosome\",\"type\"])[\"chromosome\"].size().unstack(\"type\").fillna(0).sort_index(key=lambda x: x.map(lambda v: int(v[3:].replace(\"X\",\"99\").replace(\"Y\",\"100\")))).astype('int32')\n",
     "ax = plot_data.plot.bar(figsize=(12,8), width=0.85, stacked=True, rot=45)\n",
     "# for c in ax.containers:\n",
     "#     ax.bar_label(c, label_type='center')\n",
@@ -728,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
