--- a/bed-from-catalog.ipynb
+++ b/bed-from-catalog.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "57f7faa9",
    "metadata": {
     "scrolled": false
@@ -218,7 +218,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "6c5f8b44",
    "metadata": {},
    "outputs": [],
@@ -312,8 +312,8 @@
     "                start = int(start) - 20\n",
     "                end = int (end) + 20\n",
     "                \n",
-    "#             if min_len > 0 and length < min_len:\n",
-    "#                 continue\n",
+    "            if min_len > 0 and length < min_len:\n",
+    "                continue\n",
     "                \n",
     "            if unified_file:\n",
     "                sv_type =  \"ALL\"\n",
@@ -339,24 +339,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "47cb1ae0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['INV',\n",
-       " 'INVDEL',\n",
-       " 'INS',\n",
-       " 'TANDEMLOWDUP',\n",
-       " 'DEL',\n",
-       " 'TANDEMDUPINV',\n",
+       "['INS',\n",
+       " 'INV',\n",
        " 'TANDEMDUP',\n",
-       " 'GAIN']"
+       " 'INVDEL',\n",
+       " 'GAIN',\n",
+       " 'DEL',\n",
+       " 'TANDEMLOWDUP',\n",
+       " 'TANDEMDUPINV']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
     "    \"INVDUP\": \"INV\",\n",
     "}\n",
     "\n",
-    "bed_from_catalog(catalog_path, target_dir, target_strain, False, 2, custom_mappings)"
+    "bed_from_catalog(catalog_path, target_dir, target_strain, False, 2, custom_mappings, 50)"
    ]
   },
   {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b6e77463",
    "metadata": {
     "scrolled": false
@@ -403,37 +403,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 previous-catalog/\n",
-      "├─📁 129P2/\n",
-      "│ ├─📄 129P2_DEL.bed\n",
-      "│ ├─📄 129P2_GAIN.bed\n",
-      "│ ├─📄 129P2_INS.bed\n",
-      "│ ├─📄 129P2_INV.bed\n",
-      "│ └─📄 129P2_INVDEL.bed\n",
-      "├─📁 129S1/\n",
-      "│ ├─📄 129S1_DEL.bed\n",
-      "│ ├─📄 129S1_GAIN.bed\n",
-      "│ ├─📄 129S1_INS.bed\n",
-      "│ ├─📄 129S1_INV.bed\n",
-      "│ └─📄 129S1_INVDEL.bed\n",
-      "├─📁 129S5/\n",
-      "│ ├─📄 129S5_DEL.bed\n",
-      "│ ├─📄 129S5_GAIN.bed\n",
-      "│ ├─📄 129S5_INS.bed\n",
-      "│ ├─📄 129S5_INV.bed\n",
-      "│ └─📄 129S5_INVDEL.bed\n",
-      "├─📁 AJ/\n",
-      "│ ├─📄 AJ_DEL.bed\n",
-      "│ ├─📄 AJ_GAIN.bed\n",
-      "│ ├─📄 AJ_INS.bed\n",
-      "│ ├─📄 AJ_INV.bed\n",
-      "│ └─📄 AJ_INVDEL.bed\n",
-      "└─📁 AKRJ/\n",
-      "  ├─📄 AKRJ_DEL.bed\n",
-      "  ├─📄 AKRJ_GAIN.bed\n",
-      "  ├─📄 AKRJ_INS.bed\n",
-      "  ├─📄 AKRJ_INV.bed\n",
-      "  └─📄 AKRJ_INVDEL.bed\n"
+      "📁 50/\n",
+      "└─📁 DBA2J/\n",
+      "  ├─📄 DBA2J_DEL.bed\n",
+      "  ├─📄 DBA2J_GAIN.bed\n",
+      "  ├─📄 DBA2J_INS.bed\n",
+      "  ├─📄 DBA2J_INV.bed\n",
+      "  └─📄 DBA2J_INVDEL.bed\n"
      ]
     }
    ],
