--- a/bed-from-vcf.ipynb
+++ b/bed-from-vcf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "64fdc593",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "464dd0c2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "36bc9935",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,8 @@
     "        Merged list of SV Types found\n",
     "    \"\"\"\n",
     "    \n",
-    "    chr_names=[\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\"chr15\",\"chr16\",\"chr17\",\"chr18\",\"chr19\",\"chrX\",\"chrY\"]\n",
+    "    #chr_names=[\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\"chr15\",\"chr16\",\"chr17\",\"chr18\",\"chr19\",\"chrX\",\"chrY\"]\n",
+    "    chr_names=[\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"10\",\"11\",\"12\",\"13\",\"14\",\"15\",\"16\",\"17\",\"18\",\"19\",\"X\"]\n",
     "    nucleotides = [\"A\", \"T\", \"G\", \"C\"]\n",
     "\n",
     "    type_dicts = {}\n",
@@ -129,7 +130,7 @@
     "            if(len(line_array) <8 or line.startswith(\"#\")):\n",
     "                continue\n",
     "\n",
-    "            chr1=\"chr\"+line_array[0]\n",
+    "            chr1=line_array[0]\n",
     "            start=int(line_array[1])-1\n",
     "            info=parse_info(line_array, 7)\n",
     "\n",
@@ -173,7 +174,7 @@
     "        \n",
     "        for type_dict in type_dicts.keys():\n",
     "                type_df = pd.DataFrame(type_dicts[type_dict])\n",
-    "                type_df.to_csv(final_dir + strain_name + \"_\" + type_dict + \".bed\", sep='\\t', index=False, header=False)\n",
+    "                type_df.to_csv(final_dir + type_dict + \"_\" + strain_name + \".bed\", sep='\\t', index=False, header=False)\n",
     "\n",
     "        all_types = list(set(all_types) | set([*type_dicts]))\n",
     "        \n",
@@ -182,30 +183,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "a767af79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DUP', 'DELINV', 'INS', 'INV', 'DEL']"
+       "['INV', 'DEL', 'DUP', 'INS']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sv_file_path = '../../data/DBA2J/calls/r64089e.minimap2_sniffles.vcf'\n",
-    "final_dir = '../../data/DBA2J/bed/50/minimap2-sniffles/'\n",
+    "# sv_file_path = '../../data/DBA2J/calls/r64089e.minimap2_sniffles.vcf'\n",
+    "# final_dir = '../../data/DBA2J/bed/50/minimap2-sniffles/'\n",
     "\n",
     "# sv_file_path = '../../data/DBA2J/calls/r64089e-ngmlr_sniffles.vcf'\n",
     "# final_dir = '../../data/DBA2J/bed/50/ngmlr-sniffles/'\n",
-    "\n",
-    "# sv_file_path = '../../data/DBA2J/calls/r64089e-minimap2_pbsv.vcf'\n",
-    "# final_dir = '../../data/DBA2J/bed/50/minimap2-pbsv/'\n",
+    " \n",
+    "sv_file_path = '../../data/DBA2J/calls/r64089e-minimap2_pbsv.vcf'\n",
+    "final_dir = '../../data/DBA2J/bed/50/minimap2-pbsv/'\n",
     "\n",
     "custom_mappings={\n",
     "    \"DEL\": \"DEL\",\n",
@@ -218,7 +219,15 @@
     "    \"INVDELINS\": \"INV\",\n",
     "    \"INVINS\": \"INV\",\n",
     "    \"INVDUP\": \"INV\",\n",
-    "    \n",
+    "    \"INVDEL\": \"INV\",\n",
+    "    \"DELINV\": \"INV\",\n",
+    "    \"DUP\": \"DUP\",\n",
+    "    \"GAIN\": \"DUP\",\n",
+    "    \"DUPINS\": \"DUP\",\n",
+    "    \"CNV\": \"DUP\",\n",
+    "    \"TANDEMDUP\": \"DUP\",\n",
+    "    \"TANDEMDUPINV\": \"DUP\",\n",
+    "    \"TANDEMLOWDUP\": \"DUP\",\n",
     "}\n",
     "\n",
     "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, 50)"
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "368386a2",
    "metadata": {},
    "outputs": [
@@ -234,37 +243,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 bed/\n",
+      "📁 50/\n",
+      "├─📁 intersects/\n",
+      "│ ├─📄 DEL_catalog_vs_H1.bed\n",
+      "│ ├─📄 DEL_catalog_vs_H2.bed\n",
+      "│ ├─📄 DEL_catalog_vs_validated.bed\n",
+      "│ ├─📄 DEL_pbsv_vs_H1.bed\n",
+      "│ ├─📄 DEL_pbsv_vs_H2.bed\n",
+      "│ ├─📄 DEL_pbsv_vs_catalog.bed\n",
+      "│ ├─📄 DEL_pbsv_vs_validated.bed\n",
+      "│ ├─📄 INS_catalog_vs_H6.bed\n",
+      "│ ├─📄 INS_catalog_vs_H7.bed\n",
+      "│ └─📄 INS_catalog_vs_validated.bed\n",
       "├─📁 minimap2-pbsv/\n",
-      "│ ├─📄 DBA2J_ALL.bed\n",
-      "│ ├─📄 DBA2J_CNV.bed\n",
-      "│ ├─📄 DBA2J_DEL.bed\n",
-      "│ ├─📄 DBA2J_DUP.bed\n",
-      "│ ├─📄 DBA2J_INS.bed\n",
-      "│ └─📄 DBA2J_INV.bed\n",
+      "│ ├─📄 DEL_DBA2J.bed\n",
+      "│ ├─📄 DUP_DBA2J.bed\n",
+      "│ ├─📄 INS_DBA2J.bed\n",
+      "│ └─📄 INV_DBA2J.bed\n",
       "├─📁 minimap2-sniffles/\n",
-      "│ ├─📄 DBA2J_ALL.bed\n",
-      "│ ├─📄 DBA2J_DEL.bed\n",
-      "│ ├─📄 DBA2J_DELINV.bed\n",
-      "│ ├─📄 DBA2J_DUP.bed\n",
-      "│ ├─📄 DBA2J_INS.bed\n",
-      "│ └─📄 DBA2J_INV.bed\n",
-      "├─📁 ngmlr-sniffles/\n",
-      "│ ├─📄 DBA2J_ALL.bed\n",
-      "│ ├─📄 DBA2J_DEL.bed\n",
-      "│ ├─📄 DBA2J_DELINV.bed\n",
-      "│ ├─📄 DBA2J_DUP.bed\n",
-      "│ ├─📄 DBA2J_DUPINS.bed\n",
-      "│ ├─📄 DBA2J_INS.bed\n",
-      "│ └─📄 DBA2J_INV.bed\n",
-      "├─📄 r64089e.minimap2-sniffles.bed\n",
-      "├─📄 r64089e.minimap2-sniffles_other.bed\n",
-      "└─📄 r64089e.minimap2-sniffles_precise.bed\n"
+      "│ ├─📄 DEL_DBA2J.bed\n",
+      "│ ├─📄 DUP_DBA2J.bed\n",
+      "│ ├─📄 INS_DBA2J.bed\n",
+      "│ └─📄 INV_DBA2J.bed\n",
+      "└─📁 ngmlr-sniffles/\n",
+      "  ├─📄 DEL_DBA2J.bed\n",
+      "  ├─📄 DUP_DBA2J.bed\n",
+      "  ├─📄 INS_DBA2J.bed\n",
+      "  └─📄 INV_DBA2J.bed\n"
      ]
     }
    ],
    "source": [
-    "sd.seedir(\"../../data/DBA2J/bed/\", style='emoji', itemlimit=10, depthlimit=3, include_files='.*\\.bed$', regex=True, sort=True)"
+    "sd.seedir(\"../../data/DBA2J/bed/50/\", style='emoji', itemlimit=10, depthlimit=3, include_files='.*\\.bed$', regex=True, sort=True)"
    ]
   },
   {
