--- a/bed-from-vcf.ipynb
+++ b/bed-from-vcf.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "36bc9935",
    "metadata": {},
    "outputs": [],
@@ -183,24 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "a767af79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DUP', 'DEL', 'INS', 'INV']"
+       "['DUP', 'INV', 'INS', 'DEL']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# out = \"full\"\n",
-    "out = \"50\"\n",
+    "out = \"full\"\n",
+    "# out = \"50\"\n",
     "\n",
     "# sv_file_path = '../../data/DBA2J/calls/r64089e.minimap2_sniffles.vcf'\n",
     "# final_dir = '../../data/DBA2J/bed/'+out+'/minimap2-sniffles/'\n",
@@ -208,8 +208,16 @@
     "# sv_file_path = '../../data/DBA2J/calls/r64089e-ngmlr_sniffles.vcf'\n",
     "# final_dir = '../../data/DBA2J/bed/'+out+'/ngmlr-sniffles/'\n",
     " \n",
-    "sv_file_path = '../../data/DBA2J/calls/r64089e-minimap2_pbsv.vcf'\n",
-    "final_dir = '../../data/DBA2J/bed/'+out+'/minimap2-pbsv/'\n",
+    "# sv_file_path = '../../data/DBA2J/calls/r64089e-minimap2_pbsv.vcf'\n",
+    "# final_dir = '../../data/DBA2J/bed/'+out+'/minimap2-pbsv/'\n",
+    "\n",
+    "# sv_file_path = '/home/egarcia/workspace/data/DBA2J/calls/survivor/merged.vcf'\n",
+    "# final_dir = '../../data/DBA2J/bed/'+out+'/merged/'\n",
+    "\n",
+    "sv_file_path = '/home/egarcia/workspace/data/DBA2J/calls/survivor/merged_two.vcf'\n",
+    "final_dir = '../../data/DBA2J/bed/'+out+'/merged_two/'\n",
+    "\n",
+    "\n",
     "\n",
     "custom_mappings={\n",
     "    \"DEL\": \"DEL\",\n",
@@ -233,7 +241,7 @@
     "    \"TANDEMLOWDUP\": \"DUP\",\n",
     "}\n",
     "\n",
-    "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, 50)"
+    "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, 20)"
    ]
   },
   {
